Fixed issue with scores not showing which was due to scoping issues on Firefox and iOS and a class name being reused

--- a/app/elements/leaderboard-score-card/leaderboard-score-card.scss
+++ b/app/elements/leaderboard-score-card/leaderboard-score-card.scss
@@ -76,7 +76,7 @@ $primary-accent-colour: #eeff41;
   }
 }
 
-.hole-info {
+.card-hole-info {
 
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
